fix findAll and getDoctrine()->repository

--- a/src/AppBundle/Resources/views/home/index.html.twig
+++ b/src/AppBundle/Resources/views/home/index.html.twig
@@ -16,7 +16,7 @@
 	    <div class="carousel-item active" style="background-image: url('{{ asset("img/portfolio/fullsize/p_01.jpg") }}')">
 	      <div class="carousel-caption d-none d-md-block">
 	        <h3>BARdeSuSHI</h3>
-	        <p>This is a description for the first slide.</p>
+	        <p>Bienvenidos al primer restaurante temático de la ciudad</p>
 	      </div>
 	    </div>
 	    <!-- Slide Two - Set the background image for this slide in the line below -->
