--- a/src/AppBundle/Resources/views/home/partners.html.twig
+++ b/src/AppBundle/Resources/views/home/partners.html.twig
@@ -8,22 +8,22 @@
   <br>
   
   <div class="row">
-      <div class="col-md-6 col-sm-6 col-xs-12">
+      <div class="col-md-6 col-sm-6 col-xs-12 text-center pt-5">
           <a href="https://glovoapp.com/es/" target="_blank">
               <img alt="deliveroo" width="300" src="{{ asset('img/logos/glovo.jpg') }}" class="img-responsive">
           </a>
       </div>
-      <div class="col-md-6 col-sm-6 col-xs-12">
+      <div class="col-md-6 col-sm-6 col-xs-12 text-center pt-5">
           <a href="https://www.ubereats.com/" target="_blank">
               <img alt="deliveroo" margin: 0 auto width="300" src="{{ asset('img/logos/ubereats.png') }}" class="img-responsive">
           </a>
       </div>
-      <div class="col-md-6 col-sm-6 col-xs-12">
+      <div class="col-md-6 col-sm-6 col-xs-12 text-center pt-5">
           <a href="https://deliveroo.es" target="_blank">
               <img alt="deliveroo" width="300" src="{{ asset('img/logos/deliveroo.png') }}" class="img-responsive">
           </a>
       </div>
-      <div class="col-md-6 col-sm-6 col-xs-12">
+      <div class="col-md-6 col-sm-6 col-xs-12 text-center pt-5">
           <a href="https://www.just-eat.es" target="_blank">
               <img alt="deliveroo" width="300" src="{{ asset('img/logos/justeat.png') }}" class="img-responsive">
           </a>
