--- a/src/AppBundle/Resources/views/seguridad/login.html.twig
+++ b/src/AppBundle/Resources/views/seguridad/login.html.twig
@@ -7,15 +7,15 @@
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
             <form class="form-signin" action="{{ path('login') }}" method="POST">
                 
-                <h1 class="mt-4 mb-3">
-                    <small>Acceso de administrador</small>
+                <h1 class="mt-4 mb-3 text-center">
+                    <small>Administración de productos</small>
                 </h1>
-                <div class="jumbotron">
+                <div class="jumbotron bg-light">
                 <label for="_username" class="sr-only">Username</label>
                 <input  type="text"
                         id="_username"
                         name="_username"
-                        class="form-control"
+                        class="form-control mb-3"
                         placeholder=""
                         required
                         autofocus>
@@ -23,12 +23,12 @@
                 <input  type="text"
                         id="_password"
                         name="_password"
-                        class="form-control"
+                        class="form-control mb-5"
                         placeholder=""
                         required
                         autofocus>
 
-                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button></div>
+                <button class="btn btn-lg btn-info btn-block text-uppercase" type="submit">Entrar</button></div>
             </form>
         </div>
     </div>
